--- a/src/app/loginuser/loginuser.component.html
+++ b/src/app/loginuser/loginuser.component.html
@@ -1,3 +1,27 @@
-<p>
-  loginuser works!
-</p>
+<form #loginForm="ngForm" (ngSubmit)="loginUser()">
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title">Login user</h3>
+        </div>
+
+        <div class="panel-body">
+
+            <div class="form-group" [class.has-error]="email.invalid && email.touched">
+                <label for="email" class="control-label">Email</label>
+                <input type="text" required [email]="!user.email==''" id="email" [(ngModel)]="user.email" name="email" class="form-control" #email="ngModel">
+                <span class="help-block" *ngIf="email.errors?.required && email.touched">Email is required</span>
+                <span class="help-block" *ngIf="email.errors?.email">Email is not valid</span>
+              </div>
+
+            <div class="form-group" [class.has-error]="password.invalid && password.touched">
+                <label for="password" class="control-label">Password</label>
+                <input type="password" required id="password" [(ngModel)]="user.password" name="password" class="form-control" #password="ngModel">
+                <span class="help-block" *ngIf="password.invalid && password.touched">Password is required</span>
+            </div>
+
+        </div>
+        <div class="panel-footer">
+            <button type="submit" [disabled]="loginForm.invalid" class="btn btn-primary">Login</button>
+          </div>
+    </div>
+</form>
