--- a/src/app/register-user/register-user.component.html
+++ b/src/app/register-user/register-user.component.html
@@ -49,7 +49,7 @@
 
       <div class="form-group" [class.has-error]="email.invalid && email.touched">
         <label for="email" class="control-label">Email</label>
-        <input type="text" [required]="contactPreference.value=='email'" [email]="!user.email=='' && contactPreference.value=='email'" id="email" [(ngModel)]="user.email" name="email" class="form-control" #email="ngModel">
+        <input type="text" required [email]="!user.email==''" id="email" [(ngModel)]="user.email" name="email" class="form-control" #email="ngModel">
         <span class="help-block" *ngIf="email.errors?.required && email.touched">Email is required</span>
         <span class="help-block" *ngIf="email.errors?.email">Email is not valid</span>
       </div>
@@ -79,6 +79,10 @@
           <input type="password" required appConfirmEqualValidator="password" id="confirmPassword" [(ngModel)]="confirmPasswordVerify" name="confirmPassword" class="form-control" #confirmPassword="ngModel">
           <span class="help-block" *ngIf="confirmPassword.errors?.required && confirmPassword.touched">Confirm password is required</span>
           <span class="help-block" *ngIf="confirmPassword.touched && confirmPassword.errors?.notEqual && !confirmPassword.errors?.required">Password and Confirm Password does not match</span>
+      </div>
+
+      <div class="form-group" [class.has-error]="Message!=''">
+        <span class="help-block" class.has-error *ngIf="Message!=''">{{Message}}</span>
       </div>
 
     </div>
