added movies api

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
                           <a routerLink="login">Login</a>
                   </li>
                   <li>
-                           <a routerLink="blog">Blogs</a>
+                           <a routerLink="blog">Movies blog</a>
                   </li>
           </ul>
   </nav>
