--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,16 @@
   <nav class="navbar navbar-default">
           <ul class="nav navbar-nav">
                   <li>
-                          <a routerLink="register">Register</a>
+                        <a routerLink="register">Register</a>
                   </li>
                   <li>
-                          <a routerLink="login">Login</a>
+                        <a routerLink="login">Login</a>
                   </li>
                   <li>
-                           <a routerLink="blog">Movies blog</a>
+                        <a routerLink="addMovie">Add Movie</a>
+                  </li>
+                  <li>
+                        <a routerLink="blog">Movies blog</a>
                   </li>
           </ul>
   </nav>
